# projet-facetious

./: CMakeLists.txt  Doxyfile  README.txt
include/: generate.h  solver.h  solver_z3.h  z3.h
include/ADT/: custom_type.h  list.h  queue.h
include/facetious_pelican/: affect.h  board.h  constraint.h  position.h
src/: CMakeLists.txt  generate.c  solver.c  solver_z3.c  z3.c
src/ADT/: CMakeLists.txt  CMakeLists.txt~  custom_type.c  list.c  queue.c
src/facetious_pelican/: CMakeLists.txt  affect.c  board.c  constraint.c  position.c
src/tests/: CMakeLists.txt  test_list.c  test_queue.c  test_solver.c  test_solver_cmp.c  test_solver_random.c  test_solver_z3.c  test_solver_z3_random.c
