add_executable(test_list test_list.c)
add_executable(test_queue test_queue.c)
add_executable(test_solver test_solver.c ../solver.c ../generate.c)
add_executable(test_solver_random test_solver_random.c ../solver.c ../generate.c)
add_executable(test_solver_z3 test_solver_z3.c ../solver_z3.c ../generate.c)
add_executable(test_solver_z3_random test_solver_z3_random.c ../solver_z3.c ../generate.c)
add_executable(test_solver_cmp test_solver_cmp.c ../solver.c ../solver_z3.c ../generate.c)

target_link_libraries(test_queue ADT)
target_link_libraries(test_list ADT)
target_link_libraries(test_solver ADT facetious_pelican)
target_link_libraries(test_solver_random ADT facetious_pelican)
target_link_libraries(test_solver_z3 ADT facetious_pelican)
target_link_libraries(test_solver_z3_random ADT facetious_pelican)
target_link_libraries(test_solver_cmp ADT facetious_pelican)

install(PROGRAMS ${PROJECT_BINARY_DIR}/src/tests/test_list DESTINATION ${PROJECT_BINARY_DIR}/bin/tests/)
install(PROGRAMS ${PROJECT_BINARY_DIR}/src/tests/test_queue DESTINATION ${PROJECT_BINARY_DIR}/bin/tests/)
install(PROGRAMS ${PROJECT_BINARY_DIR}/src/tests/test_solver DESTINATION ${PROJECT_BINARY_DIR}/bin/tests/)
install(PROGRAMS ${PROJECT_BINARY_DIR}/src/tests/test_solver_random DESTINATION ${PROJECT_BINARY_DIR}/bin/tests/)
install(PROGRAMS ${PROJECT_BINARY_DIR}/src/tests/test_solver_z3 DESTINATION ${PROJECT_BINARY_DIR}/bin/tests/)
install(PROGRAMS ${PROJECT_BINARY_DIR}/src/tests/test_solver_z3_random DESTINATION ${PROJECT_BINARY_DIR}/bin/tests/)
install(PROGRAMS ${PROJECT_BINARY_DIR}/src/tests/test_solver_cmp DESTINATION ${PROJECT_BINARY_DIR}/bin/tests/)